Version 1.0.1 (May 10 2011)
* Added build support for OSX
* Removed unnecessary whitespace from JSON output

Version 1.0 (May 9 2011)
* Initial release.